--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
     "require-dev": {
         "orchestra/testbench": "3.3.*",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "4.*"
+      "phpunit/phpunit": "5.0"
     },
     "autoload": {
       "psr-4": {
