--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,9 @@
         "php": ">=5.6.9",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "illuminate/support": "5.3.*",
-        "illuminate/database": "5.3.*",
-        "illuminate/auth": "5.3.*",
+        "illuminate/support": "^5.3",
+        "illuminate/database": "^5.3",
+        "illuminate/auth": "^5.3",
         "php-http/httplug": "^1.1",
         "php-http/guzzle6-adapter": "^1.1",
         "guzzlehttp/psr7": "^1.3",
